--- a/index.html
+++ b/index.html
@@ -15,13 +15,12 @@
 		<main>
 			<h1>Chappie</h1>
 			
-			<p>Envie de parler à quelqu'un ? Il va d'abord falloir apprendre à cette intelligence artificielle à interagir avec vous.</p>
+			<p>Envie de parler à quelqu'un ? Il va d'abord falloir m'apprendre à interagir avec vous.</p>
 			
 			<h2>Conversation</h2>
 			<div id="conversation">
 				
-			</div>
-			
+			</div>	
 			<h2>Nouveau message :</h2>
 			<form id="form" action="index.html">
 				<input id="message" type="search" placeholder="Parlez-moi librement"/>
